Got LessThan working. Looks like numeric stuff is all good except for greater than equals and less than equals. Going to change dates to numeric types now